Added l10n related mechanisms.
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I416098852b607f26723cbfd564d2d24141d59453

--- a/ossii/Makefile.am
+++ b/ossii/Makefile.am
@@ -10,6 +10,9 @@ SUBDIRS = browser etc extensions fonts
 pkgconfigdir = $(libdir)/pkgconfig
 #pkgconfig_DATA = @PACKAGE@.pc
 
+EXTRA_DIST = \
+	scripts/po2json.py
+
 install-data-local:
 	$(INSTALL) -d $(DESTDIR)$(pkgconfigdir)
 	$(INSTALL_DATA) $(srcdir)/online.pc $(DESTDIR)$(pkgconfigdir)/@PACKAGE@.pc
