--- a/ossii/src/lib/Makefile.am
+++ b/ossii/src/lib/Makefile.am
@@ -81,16 +81,18 @@ oxoolwsd_sources = $(top_srcdir)/common/Crypto.cpp \
                   $(top_srcdir)/wsd/oxoolwsd-fork.cpp
 
 oxoolcore_internal_header = \
+							OxOOL/ModuleManager/AdminService.hpp \
+							OxOOL/ModuleManager/BrowserService.hpp \
 							OxOOL/ModuleManager/ModuleAgent.hpp \
 							OxOOL/ModuleManager/ModuleLibrary.hpp
 
 noinst_HEADERS = $(oxoolcore_internal_header)
 
 oxoolcore_sources = \
+                    OxOOL/ModuleManager/AdminService.cpp \
+                    OxOOL/ModuleManager/BrowserService.cpp \
                     OxOOL/ModuleManager/ModuleAgent.cpp \
                     OxOOL/ModuleManager/ModuleLibrary.cpp \
-                    OxOOL/ModuleManager/AdminService.hpp \
-                    OxOOL/ModuleManager/BrowserService.hpp \
 					OxOOL/OxOOL.cpp \
                     OxOOL/Module/Base.cpp \
                     OxOOL/Module/Map.cpp \
