Upgrade the module architecture again.
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I97d73f885759906e9f58270655612544397dac31

--- a/ossii/Makefile.am
+++ b/ossii/Makefile.am
@@ -11,7 +11,7 @@ pkgconfigdir = $(libdir)/pkgconfig
 #pkgconfig_DATA = @PACKAGE@.pc
 
 EXTRA_DIST = \
-	scripts/po2json.py
+	scripts/mergepo2json.py
 
 install-data-local:
 	$(INSTALL) -d $(DESTDIR)$(pkgconfigdir)
