--- a/ossii/browser/Makefile.am
+++ b/ossii/browser/Makefile.am
@@ -13,6 +13,22 @@ DIST_FOLDER = $(top_srcdir)/browser/dist
 
 all-local: build-browserdist
 
+merge_po_to_json:
+	@for i in $(wildcard $(srcdir)/po/*.po); do \
+		POFILE="$$i"; \
+		# 去掉 po/ 路徑前綴，取得語言代碼 \
+		LANGCODE=$$(basename $$POFILE .po); \
+		JSONFILE="$(DIST_FOLDER)/l10n/ui-$${LANGCODE}.json"; \
+		# 如果沒有對應的 JSON 檔案，則不處理 \
+		if [ ! -f "$$JSONFILE" ]; then \
+			echo "$${JSONFILE} not found, skip..."; \
+			continue; \
+		fi; \
+		echo "Merge $$POFILE to $$JSONFILE..."; \
+		# 執行 mergepo2json.py 腳本，將 PO 檔案合併到 JSON 檔案 \
+		$(top_srcdir)/ossii/scripts/mergepo2json.py --po "$$POFILE" --json "$$JSONFILE" --output "$$JSONFILE"; \
+	done
+
 # 複製 uiconfig/ 所有檔案
 UICONFIG_SRC = $(shell find $(srcdir)/uiconfig -name '*.*')
 UICONFIG_DST = $(patsubst $(srcdir)/%,$(DIST_FOLDER)/%,$(UICONFIG_SRC))
@@ -21,11 +37,8 @@ $(DIST_FOLDER)/uiconfig/%: $(srcdir)/uiconfig/%
 	@cp $< $@
 
 ADMIN_JS_LIST = \
-	../admin/js/global.js \
-	../admin/js/color-scheme-switcher.js \
-	../admin/src/Base.js \
-	../admin/src/AdminSocketBase.js \
-	../admin/src/Util.js
+	admin/js/*.js \
+	admin/src/*.js
 
 # 準備打包的 JS 檔案列表
 OXOOL_JS_LIST = \
@@ -48,15 +61,13 @@ OXOOL_JS_LIST = \
 pot:
 	xgettext --from-code=UTF-8 --language=JavaScript --keyword=_ --output=po/ossii.pot \
 		$(OXOOL_JS_LIST) \
-		$(ADMIN_L10N_JS_LIST)
+		$(ADMIN_JS_LIST)
 
 	msguniq -w 78 -t UTF-8 po/ossii.pot > po/ossii.pot.new; mv po/ossii.pot.new po/ossii.pot
 
 l10n: pot
 	for i in po/*.po; do pot2po --input=po/ossii.pot --template=$$i --output=$$i.new; mv $$i.new $$i;done
-
-L10N_PO = $(wildcard $(srcdir)/po/*.po)
-L10N_JSON = $(patsubst $(srcdir)/po/%.po,$(DIST_FOLDER)/l10n/ossii/%.json,$(L10N_PO))
+#	@for i in po/*.po; do msgmerge --update --backup=off $$i po/ossii.pot;done
 
 # 產生打包用的 JS 檔案
 ossii-src.js: $(OXOOL_JS_LIST)
@@ -79,7 +90,6 @@ $(DIST_FOLDER)/ossii.js: ossii-src.js
 		$^ \
 		--output $@
 
-
 #
 $(DIST_FOLDER)/branding-%.css: css/branding-%.css
 	@echo "Uglifying $@..."
@@ -96,11 +106,6 @@ OXOOL_CSS_LIST = \
 	css/notebookbar.css \
 	css/spectrum.css
 
-$(DIST_FOLDER)/l10n/ossii-localizations.json: $(srcdir)/l10n/ossii-localizations.json
-	@echo "Copying $@..."
-	@$(MKDIR_P) $(dir $@)
-	cp $< $@
-
 $(DIST_FOLDER)/branding.css: $(OXOOL_CSS_LIST)
 	@echo "Checking for CSS errors..."
 	@$(NODE) $(top_srcdir)/browser/node_modules/stylelint/bin/stylelint.js --config $(top_srcdir)/browser/.stylelintrc.json $(srcdir)/css/*.css
@@ -112,12 +117,12 @@ $(DIST_FOLDER)/branding.css: $(OXOOL_CSS_LIST)
 build-browserdist: \
 	$(IMAGES_DST) \
 	$(UICONFIG_DST) \
+	merge_po_to_json \
 	$(DIST_FOLDER)/ossii.js \
 	$(DIST_FOLDER)/branding.css \
 	$(DIST_FOLDER)/branding-mobile.css \
 	$(DIST_FOLDER)/branding-tablet.css \
-	$(DIST_FOLDER)/branding-desktop.css \
-	$(DIST_FOLDER)/l10n/ossii-localizations.json
+	$(DIST_FOLDER)/branding-desktop.css
 	@echo "Done building browser dist"
 
 # 清除打包用的相關檔案及目錄
@@ -125,7 +130,6 @@ clean-local:
 	@echo "Cleaning browser dist"
 	$(RM) -f $(DIST_FOLDER)/ossii.js
 	$(RM) -f $(DIST_FOLDER)/branding*.css
-	$(RM) -f $(DIST_FOLDER)/l10n/ossii-localizations.json
 	$(RM) -rf $(DIST_FOLDER)/uiconfig
 	$(RM) -rf ossii-src.js
 
