Initial completion of backend management structure
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I9acd826b260dc81a417e9c52bf5f7848a6e1cf56

--- a/ossii/browser/Makefile.am
+++ b/ossii/browser/Makefile.am
@@ -38,7 +38,8 @@ $(DIST_FOLDER)/uiconfig/%: $(srcdir)/uiconfig/%
 
 ADMIN_JS_LIST = \
 	admin/js/*.js \
-	admin/src/*.js
+	admin/src/*.js \
+	$(shell find admin/standard -name "admin.js")
 
 # 準備打包的 JS 檔案列表
 OXOOL_JS_LIST = \
