browser and admin share the built-in l10n.js
It will also replace the original l10n.js

Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I35f78cc72627ca3803612324e6e5f600bf5e19dd

--- a/ossii/browser/admin/Makefile.am
+++ b/ossii/browser/admin/Makefile.am
@@ -5,6 +5,7 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 ADMIN_SRC_JS = \
+	$(top_srcdir)/ossii/browser/js/l10n.js \
 	src/Base.js \
 	src/Util.js \
 	src/AdminSocketBase.js \
