--- a/ossii/online.spec.in
+++ b/ossii/online.spec.in
@@ -109,8 +109,10 @@ sed -i "/^ReadWritePaths/d;/^ProtectControlGroups/d;/^ProtectSystem/d" %{buildro
 %dir %{_sysconfdir}/%{name}/conf.d
 %{_sysconfdir}/%{name}/conf.d/Alive.xml
 %{_sysconfdir}/%{name}/conf.d/Announce.xml
+%{_sysconfdir}/%{name}/conf.d/FontManager.xml
 %{_libdir}/%{name}/alive.so
 %{_libdir}/%{name}/announce.so
+%{_libdir}/%{name}/FontManager.so
 %{_libdir}/*.so.*
 %endif
 
