Added software upgrade module.
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: Ie968688a086560002699936b1431ec780c41254b

--- a/ossii/online.spec.in
+++ b/ossii/online.spec.in
@@ -110,9 +110,11 @@ sed -i "/^ReadWritePaths/d;/^ProtectControlGroups/d;/^ProtectSystem/d" %{buildro
 %{_sysconfdir}/%{name}/conf.d/Alive.xml
 %{_sysconfdir}/%{name}/conf.d/Announce.xml
 %{_sysconfdir}/%{name}/conf.d/FontManager.xml
+%{_sysconfdir}/%{name}/conf.d/SoftwareUpgrade.xml
 %{_libdir}/%{name}/alive.so
 %{_libdir}/%{name}/announce.so
 %{_libdir}/%{name}/FontManager.so
+%{_libdir}/%{name}/SoftwareUpgrade.so
 %{_libdir}/*.so.*
 %endif
 
