--- a/ossii/src/lib/Makefile.am
+++ b/ossii/src/lib/Makefile.am
@@ -20,7 +20,7 @@ if !ENABLE_DEBUG
 AM_CPPFLAGS += -DNDEBUG
 endif
 
-AM_LDFLAGS = -Wl,-E -lpam $(ZLIB_LIBS) $(ZSTD_LIBS) $(PNG_LIBS)
+AM_LDFLAGS = -Wl,-E -lpam $(ZLIB_LIBS) $(ZSTD_LIBS) $(PNG_LIBS) -lPocoZip
 
 # Clang's linker doesn't like -pthread.
 if !HAVE_CLANG
