Add additional message file OtherMessages.js
This file is only used to generate .po file message entries.
There is no need to package it into the execution environment.

Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: Ib2284e96e92c1c14b306c90bf8051147d5a3fe09

--- a/ossii/browser/Makefile.am
+++ b/ossii/browser/Makefile.am
@@ -62,6 +62,7 @@ OXOOL_JS_LIST = \
 
 pot:
 	xgettext --from-code=UTF-8 --language=JavaScript --keyword=_ --output=po/ossii.pot \
+		js/OtherMessages.js \
 		$(OXOOL_JS_LIST) \
 		$(ADMIN_JS_LIST)
 
