--- a/ossii/online.pc.in
+++ b/ossii/online.pc.in
@@ -14,4 +14,4 @@ Name: @PACKAGE@
 Description:
 Version: @VERSION@
 Libs: -L${libdir} -l@OSSII_LIB_NAME@
-Cflags: -I${includedir}/OxOOL -I${includedir}/OxOOL/common -I${includedir}/OxOOL/net -I${includedir}/OxOOL/wsd -I${includedir}/OxOOL/LibreOfficeKit
+Cflags: -I${includedir}/OxOOL -I${includedir}/OxOOL/common -I${includedir}/OxOOL/net -I${includedir}/OxOOL/wsd -I${includedir}/OxOOL/kit -I${includedir}/OxOOL/LibreOfficeKit
