--- a/ossii/src/include/Makefile.am
+++ b/ossii/src/include/Makefile.am
@@ -17,7 +17,8 @@ OxOOL_include_HEADERS = \
 	OxOOL/ConvertBroker.h \
 	OxOOL/Util.h \
 	OxOOL/Util/OptionlValidator.h \
-	OxOOL/Util/FileValidator.h
+	OxOOL/Util/FileValidator.h \
+	OxOOL/Kit.h
 
 OxOOL_Module_includedir = $(includedir)/OxOOL/Module
 OxOOL_Module_include_HEADERS = \
