ZipPackage: New Zip Package handling mechanism.
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I4c3836e36e3c2f400a4152cb6a63f1c5bd3e07cc

--- a/ossii/src/lib/Makefile.am
+++ b/ossii/src/lib/Makefile.am
@@ -108,7 +108,8 @@ oxoolcore_sources = \
                     OxOOL/Util/OptionlValidator.cpp \
                     OxOOL/Util/FileValidator.cpp \
                     OxOOL/Private/Watermark.cpp \
-                    OxOOL/Kit.cpp
+                    OxOOL/Kit.cpp \
+                    OxOOL/ZipPackage.cpp
 
 lib_LTLIBRARIES = lib@OSSII_LIB_NAME@.la
 lib@OSSII_LIB_NAME@_la_SOURCES = $(shared_sources) $(oxoolwsd_sources) $(oxoolcore_sources)
