--- a/ossii/src/include/Makefile.am
+++ b/ossii/src/include/Makefile.am
@@ -18,7 +18,8 @@ OxOOL_include_HEADERS = \
 	OxOOL/Util.h \
 	OxOOL/Util/OptionlValidator.h \
 	OxOOL/Util/FileValidator.h \
-	OxOOL/Kit.h
+	OxOOL/Kit.h \
+    OxOOL/ZipPackage.h
 
 OxOOL_Module_includedir = $(includedir)/OxOOL/Module
 OxOOL_Module_include_HEADERS = \
