Introducing a new icon processing mechanism.
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: Idac9e2e9d3b5d046bb2f7e53697f5ea783c4caf8

--- a/ossii/browser/Makefile.am
+++ b/ossii/browser/Makefile.am
@@ -49,8 +49,8 @@ OXOOL_JS_LIST = \
 	js/ModuleManager.js \
 	js/map/handler/Map.AlternativeCommand.js \
 	js/map/handler/Map.StateChanges.Extend.js \
+	js/map/handler/Map.Icon.js \
 	js/control/Permission.Extensions.js \
-	js/control/IconAlias.js \
 	js/control/Toolbar.Extensions.js \
 	js/control/Parts.Extensions.js \
 	js/control/Control.Dialogs.js \
