Added Vendor related mechanism.
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I5d6ddc0b3adb5bca8689c715496df3ab9a11419e

--- a/ossii/src/lib/Makefile.am
+++ b/ossii/src/lib/Makefile.am
@@ -9,6 +9,7 @@
 AM_CPPFLAGS = -pthread -DOXOOLWSD_DATADIR='"@OXOOLWSD_DATADIR@"' \
 	      -DOXOOLWSD_CONFIGDIR='"@OXOOLWSD_CONFIGDIR@"' \
 	      -DDEBUG_ABSSRCDIR='"@abs_top_builddir@"' \
+		  -DVENDOR='"@VENDOR@"' \
           $(ZLIB_CFLAGS) $(ZSTD_CFLAGS) $(PNG_CFLAGS) \
 		  $(OSSII_CFLAGS)
 
