Added custom notebookbar: Writer, Calc, Impress & Draw
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I28f73e78ce572f269b6ffec9d43b313e593d9b88

--- a/ossii/browser/Makefile.am
+++ b/ossii/browser/Makefile.am
@@ -57,6 +57,10 @@ OXOOL_JS_LIST = \
 	js/control/Control.ContextMenu.js \
 	js/control/Control.Menubar.js \
 	js/control/Control.ReadonlyBar.js \
+	js/control/Control.NotebookbarWriter.js \
+	js/control/Control.NotebookbarCalc.js \
+	js/control/Control.NotebookbarImpress.js \
+	js/control/Control.NotebookbarDraw.js \
 	js/spectrum.js \
 	js/main.js
 
