--- a/ossii/browser/Makefile.am
+++ b/ossii/browser/Makefile.am
@@ -47,9 +47,10 @@ OXOOL_JS_LIST = \
 	js/BrandingData.js \
 	js/OxOOL.js \
 	js/ModuleManager.js \
+	js/map/handler/Map.Tasks.js \
+	js/map/handler/Map.Icon.js \
 	js/map/handler/Map.AlternativeCommand.js \
 	js/map/handler/Map.StateChanges.Extend.js \
-	js/map/handler/Map.Icon.js \
 	js/control/Permission.Extensions.js \
 	js/control/Toolbar.Extensions.js \
 	js/control/Parts.Extensions.js \
