Introducing enhanced text input.
And adopts two input modes:
 1. Over the spot. (This is the default)
 2. On the spot.

If you want to switch between these two modes,
Just type: 切換輸入模式
and press <Enter>

Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I6f37d626b2979655e63559a64cb1501de431a816

--- a/ossii/browser/Makefile.am
+++ b/ossii/browser/Makefile.am
@@ -47,6 +47,7 @@ OXOOL_JS_LIST = \
 	js/BrandingData.js \
 	js/OxOOL.js \
 	js/ModuleManager.js \
+	js/layer/marker/EnhancedTextInput.js \
 	js/map/handler/Map.Tasks.js \
 	js/map/handler/Map.Icon.js \
 	js/map/handler/Map.AlternativeCommand.js \
