Added enhanced Status Bar.
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: Ie934ef792f32c3ada31df9c3a9046b6875a00ab6

--- a/ossii/browser/Makefile.am
+++ b/ossii/browser/Makefile.am
@@ -59,6 +59,7 @@ OXOOL_JS_LIST = \
 	js/control/Control.ContextMenu.js \
 	js/control/Control.Menubar.js \
 	js/control/Control.ReadonlyBar.js \
+	js/control/Control.StatusBar.js \
 	js/control/Control.NotebookbarWriter.js \
 	js/control/Control.NotebookbarCalc.js \
 	js/control/Control.NotebookbarImpress.js \
