Move extended ClientSession functionality to OxOOL::WSD::ExtensionSession.
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: Idc9829630fd09e1b52e363fd09cbd9b5aaa886a1

--- a/ossii/src/include/Makefile.am
+++ b/ossii/src/include/Makefile.am
@@ -23,6 +23,7 @@ OxOOL_include_HEADERS = \
     OxOOL/Util.h \
     OxOOL/Util/OptionlValidator.h \
     OxOOL/Util/FileValidator.h \
+    OxOOL/WSD.h \
     OxOOL/Kit.h \
     OxOOL/ZipPackage.h \
     OxOOL/ResourceManager.h \
