module: Added external editing related mechanisms.
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I480c8493d11da81709be35a6cb4ec178e2f6cbef

--- a/ossii/browser/Makefile.am
+++ b/ossii/browser/Makefile.am
@@ -53,6 +53,7 @@ OXOOL_JS_LIST = \
 	js/map/handler/Map.Icon.js \
 	js/map/handler/Map.AlternativeCommand.js \
 	js/map/handler/Map.StateChanges.Extend.js \
+	js/map/handler/Map.ExternalEdit.js \
 	js/control/Permission.Extensions.js \
 	js/control/Toolbar.Extensions.js \
 	js/control/Parts.Extensions.js \
