Added enhanced Notebookbar builder.
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I8e91b01b84d23a519cf09ead91087db911c40e07

--- a/ossii/browser/Makefile.am
+++ b/ossii/browser/Makefile.am
@@ -61,6 +61,7 @@ OXOOL_JS_LIST = \
 	js/control/Control.Menubar.js \
 	js/control/Control.ReadonlyBar.js \
 	js/control/Control.StatusBar.js \
+	js/control/Control.NotebookbarEnhancedBuilder.js \
 	js/control/Control.NotebookbarWriter.js \
 	js/control/Control.NotebookbarCalc.js \
 	js/control/Control.NotebookbarImpress.js \
